--- a/pdf/pubspec.yaml
+++ b/pdf/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   image: ^4.0.0
   meta: ">=1.3.0 <2.0.0"
   path_parsing: ">=0.2.0 <2.0.0"
+  syncfusion_flutter_charts: ^21.2.3
   vector_math: ^2.1.0
   xml: ">=5.1.0 <7.0.0"
 
